--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -10,5 +10,17 @@
 // Color system
 //
 
-$primary: #7C008C;
+$blue:          #4964DD;    // royal blue light
+$grey:          #595457;    // davys grey
+$ivory:         #F6F7EB;    // ivory
+$red:           #9E1946;    // big dip o ruby
+$orange:        #E94F37;    // cinnabar
+
+$primary:       $blue;
+$secondary:     $grey;
+$light:         $ivory;
+$dark:          $grey;
+$body-bg:       $light;
+$body-color:    $dark;
+
 
