Change primary colour to ruby.

--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -16,7 +16,7 @@ $ivory:         #F6F7EB;    // ivory
 $red:           #9E1946;    // big dip o ruby
 $orange:        #E94F37;    // cinnabar
 
-$primary:       $blue;
+$primary:       $red;
 $secondary:     $grey;
 $light:         $ivory;
 $dark:          $grey;
