--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -17,7 +17,7 @@ $red:           #9E1946;    // big dip o ruby
 $orange:        #E94F37;    // cinnabar
 
 $primary:       $red;
-$secondary:     $grey;
+$secondary:     $orange;
 $light:         $ivory;
 $dark:          $grey;
 $body-bg:       $light;
