Update Theme URI to GitHub.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  Theme Name:   Laudate
- Theme URI:    https://www.understrap.com
+ Theme URI:    https://github.com/claudinec/understrap-laudate
  Description:  Laudate on the Lounge based on UnderStrap Child Theme
  Author:       Claudine Chionh
  Author URI:   https://www.claudinec.net
