Update version info.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
  Theme Name:   Laudate
  Theme URI:    https://github.com/claudinec/understrap-laudate
- Description:  Laudate on the Lounge based on UnderStrap Child Theme
+ Description:  Laudate on the Lounge based on UnderStrap Child Theme 0.5.5
  Author:       Claudine Chionh
  Author URI:   https://www.claudinec.net
  Template:     understrap
- Version:      0.5.5
+ Version:      0.9.0
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  understrap-laudate
